# graph_drawing

./: .gitignore  premake5.lua
data/: ash85.mtx  test8.mtx
src/: CMakeLists.txt  app.cpp  graph.cpp  graph.hpp  graphDraw.cpp  graphDraw.hpp  triangle.cpp  triangle.hpp
src/reader/: matrixMarket.cpp  matrixMarket.hpp
